1998-12-15  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* Collection.m ([PermutedIndex_c -mapAllocations:mapalloc]): 
	Remove return self.

	* Permutation.m ([Permutation_c -mapAllocations:mapalloc]): 
	Likewise
	

	* Collection.m ([PermutedIndex_c -mapAllocations:mapalloc]): 
	Cast mapAllocations: as void.

	* Permutation.m ([Permutation_c -mapAllocations:mapalloc]): 
	Likewise.

1998-12-14  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* Collection.m ([PermutedIndex_c -mapAllocations:mapalloc]): 
	mapAllocations: implemented.
	([PermutedIndex_c -createEnd]): Add setMappedAlloc.

	* Collection.h: Add mapAllocations: method to PermutedIndex_c.

	* ListShuffler.m: Declare uniformUnsRandom to avoid linking problems.
	([ListShuffler_c -createEnd]): Add setNextPhase.

	* Permutation.m ([Permutation_c -mapAllocations:mapalloc]): 
	mapAllocations: implemented.

	* Permutation.h: Add mapAllocations method.
	
1998-12-14  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* ListShuffler.[hm], collections.h ([ListShuffler_c
	-setUniformRandom:]): Return self instead of nothing.

	* ListShuffler.[hm], collections.h ([ListShuffler_c
	-shufflePartialList:Num:]): Make num argument unsigned. 

	* Permutation.[hm], collections.h ([Permutation_c
	-setMinElement:]): ([Permutation_c -setMaxElement:]): Take
	unsigned as argument instead of int and return self instead of
	nothing.

	* ListShuffler.m ([ListShuffler_c -shufflePartialList:Num:]): Make
	j, k and m unsigned.
	([ListShuffler_c -shuffleWholeList:]): Make j and k unsigned.
	
	* Permutation.m [Permutation_c -createEnd]): Use unsigned instead
	of int for i.  Send setCount: and atOffset: to self instead of super.
	([Permutation_c -describe:]): Make elem unsigned and sprintf
	format %u instead of %d.

	* collections.m (_collections_implement): Associate ListShuffler_c
	and ListShuffler.

	* collections.h (ListShuffler): Adopt Create, Drop, and CREATABLE.

	* Makefile.am (INCLUDES): Add random.
